--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
   },
   "devDependencies": {
     "@swc/core": "^1.4.8",
-    "css-loader": "^6.10.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.1",
+    "raw-loader": "^4.0.2",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
     "swc-loader": "^0.2.6",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
