--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,14 @@
       ]
     }
   ],
-  "cSpell.words": ["datasources", "usecases", "vanillatte", "fastify"],
+  "cSpell.words": [
+    "datasource",
+    "datasources",
+    "usecase",
+    "usecases",
+    "vanillatte",
+    "fastify"
+  ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
     "source.organizeImports": "explicit"
