--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "@swc/core": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
+    "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "raw-loader": "^4.0.2",
-    "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
+    "postcss-loader": "^8.1.1",
     "swc-loader": "^0.2.6",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
