--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "// *  Start application (local) and api with mock data                                   ": "",
     "start:mock": "npm run start:local & npm run start:api"
   },
-  "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "fastify": "^4.26.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@swc/core": "^1.4.8",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "css-loader": "^6.10.0",
-    "eslint": "^8.57.0",
+    "express": "^4.19.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
