--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 /**
  * This file is used to list all extensions that are recommended.
- * If you know a beter one, please make a PR to update/upgrade it.
+ * If you know a beter one, please make a PR to update/upgrade it and shre with the team member.
  */
 {
   "recommendations": [
