refactor: Update names

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,7 +82,7 @@
     "usecases",
     "vanillatte",
     "vaníllatte",
-    "vlla"
+    "vnlt"
   ],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit",
