--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "type": "module",
   "description": "Vanillatte",
   "scripts": {
-    "// *  Start api mock server with mock data                                               ": "",
-    "start:api": "node src/mock/server/api.js",
-    "// *  Start application (local)                                                          ": "",
-    "start:local": "webpack serve --config=webpack.config.cjs --define-process-env-node-env=local",
-    "// *  Start application (dev)                                                            ": "",
-    "start:dev": "webpack serve --config=webpack.config.cjs --define-process-env-node-env=dev",
-    "// *  Start application (local) and api with mock data                                   ": "",
-    "start:mock": "npm run start:local & npm run start:api",
+    "// *  Start API (mock)                                                                   ": "",
+    "start:mock:backend": "node src/mock/backend/serve.js",
+    "// *  Start SPA (mock)                                                                   ": "",
+    "start:mock:frontend": "nodemon --exec 'NODE_ENV=mock node' src/mock/frontend/serve.js",
+    "// *  Start SPA (mock) and API (mock)                                                    ": "",
+    "start:mock": "npm run start:mock:frontend & npm run start:mock:backend",
     "// *  Build application                                                                  ": "",
     "build:dev": "webpack --config=webpack.config.cjs --define-process-env-node-env=dev",
     "// *  Clean up Docker containers, images, networks, and volumes                          ": "",
@@ -41,11 +39,11 @@
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "lefthook": "^1.6.7",
+    "nodemon": "^3.1.0",
     "postcss-loader": "^8.1.1",
     "swc-loader": "^0.2.6",
     "typescript": "^5.4.4",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-cli": "^5.1.4"
   }
 }
