--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Vanillatte",
   "scripts": {
     "// *  Start API (mock)                                                                   ": "",
-    "start:mock:backend": "node src/mock/backend/serve.js",
+    "start:mock:backend": "node src/mock/server/backend/serve.js",
     "// *  Start SPA (mock)                                                                   ": "",
-    "start:mock:frontend": "nodemon --exec 'NODE_ENV=mock node' src/mock/frontend/serve.js",
+    "start:mock:frontend": "nodemon --exec 'NODE_ENV=mock node' src/mock/server/frontend/serve.js",
     "// *  Start SPA (mock) and API (mock)                                                    ": "",
     "start:mock": "npm run start:mock:frontend & npm run start:mock:backend",
     "// *  Build application                                                                  ": "",
